<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
        <TextView android:layout_height="wrap_content" android:id="@+id/textView7" android:layout_width="wrap_content" android:layout_weight="1" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/user_profile"></TextView>
        <Spinner android:layout_weight="1" style="@style/SpinnerAsEditText" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/spinnerProfileList"></Spinner>
        <TextView android:text="@string/user_id" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:id="@+id/textView1"></TextView>
        <EditText android:id="@+id/editText1" android:layout_height="wrap_content" android:layout_width="match_parent">
            <requestFocus></requestFocus>
        </EditText>
        <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:id="@+id/textView2" android:text="@string/user_name"></TextView>
        <EditText android:id="@+id/editText2" android:layout_height="wrap_content" android:layout_width="match_parent"></EditText>
        <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:id="@+id/textView3" android:text="@string/user_sex"></TextView>
        <Spinner android:id="@+id/spinnerSex" android:layout_height="wrap_content" android:layout_width="match_parent"></Spinner>
        <TextView android:text="@string/user_age" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:id="@+id/textView4"></TextView>
        <EditText android:id="@+id/editText3" android:layout_height="wrap_content" android:layout_width="match_parent"></EditText>
        <TextView android:text="@string/user_height" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:id="@+id/textView5"></TextView>
        <EditText android:id="@+id/editText4" android:layout_height="wrap_content" android:layout_width="match_parent"></EditText>
        <TextView android:text="@string/user_weight" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:id="@+id/textView6"></TextView>
        <EditText android:id="@+id/editText5" android:layout_height="wrap_content" android:layout_width="match_parent"></EditText>
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/user_image"></TextView>
        <ImageButton android:id="@+id/imageButton1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/preferences_desktop_user"></ImageButton>
        <LinearLayout android:id="@+id/linearLayout2" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_weight="1">
            <Button android:layout_weight="1" android:id="@+id/buttonCreateProfile" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/button_profile_add" android:drawableLeft="@drawable/data_add"></Button>
            <Button android:layout_weight="1" android:id="@+id/buttonSaveProfile" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/button_profile_save" android:drawableLeft="@drawable/document_save"></Button>
            <Button android:layout_weight="1" android:id="@+id/buttonDeleteProfile" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/button_profile_del" android:drawableLeft="@drawable/data_remove"></Button>
        </LinearLayout>
    </LinearLayout>
    
</ScrollView>
