<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:background="@drawable/stripes" android:orientation="vertical">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:background="@drawable/stripes" android:orientation="vertical">
    <LinearLayout android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:layout_width="fill_parent">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView2" android:text="@string/version_desc"></TextView>
        <TextView android:textStyle="bold" android:layout_width="wrap_content" android:textSize="24sp" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/version"></TextView>
        <TextView android:textColor="#ffcc00" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hello"></TextView>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/LinearLayout07">
        <Button android:text="@string/add_data" android:layout_width="253dp" android:drawableTop="@drawable/data_add" android:layout_height="wrap_content" android:id="@+id/Button02" android:textSize="18sp" android:onClick="measureActivity"></Button>
        <LinearLayout android:layout_width="fill_parent" android:layout_weight="2" android:id="@+id/LinearLayout06" android:orientation="vertical" android:layout_height="wrap_content">
            <TextView android:layout_width="fill_parent" android:text="@string/user_profile" android:layout_weight="1" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:textSize="24sp" android:id="@+id/textView1"></TextView>
            <Spinner 
            	android:layout_width="fill_parent" 
            	android:layout_height="wrap_content" 
            	android:layout_weight="1" 
            	android:id="@+id/spinnerProfileList" style="@style/SpinnerAsEditText">
            </Spinner>
        </LinearLayout>
        <Button android:text="@string/show_journal" android:layout_width="253dp" android:drawableTop="@drawable/kjournal" android:layout_height="wrap_content" android:id="@+id/Button01" android:textSize="18sp" android:onClick="journalActivity"></Button>
    </LinearLayout>
    <LinearLayout android:id="@+id/LinearLayout03" android:layout_height="wrap_content" android:layout_width="fill_parent">
        <Button android:layout_width="253dp" android:layout_height="wrap_content" android:id="@+id/buttonConfig" android:drawableTop="@drawable/preferences_system" android:text="@string/buttonConfig" android:textSize="18sp" android:onClick="configActivity"></Button>
        <LinearLayout android:layout_weight="2" android:id="@+id/LinearLayout02" android:layout_height="match_parent" android:layout_width="fill_parent" android:orientation="vertical">
        </LinearLayout>
        <Button android:layout_width="253dp" android:layout_height="wrap_content" android:drawableTop="@drawable/system_users" android:id="@+id/buttonUsers" android:text="@string/buttonProfile" android:textSize="18sp" android:onClick="profileActivity"></Button>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/LinearLayout05">
        <Button android:text="@string/buttonHelp" android:layout_width="253dp" android:layout_height="wrap_content" android:id="@+id/buttonHelp" android:textSize="18sp" android:drawableTop="@drawable/help" android:onClick="helpActivity"></Button>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="match_parent" android:layout_weight="2" android:id="@+id/LinearLayout04"></LinearLayout>
        <Button android:text="@string/buttonAbout" android:layout_width="253dp" android:drawableTop="@drawable/help_about" android:layout_height="wrap_content" android:id="@+id/buttonAbout" android:onClick="aboutActivity" android:textSize="18sp"></Button>
    </LinearLayout>
    <LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent">
        <Button android:text="@string/butonSave" android:layout_width="253dp" android:drawableTop="@drawable/document_save" android:layout_height="wrap_content" android:id="@+id/buttonSave" android:onClick="saveData" android:textSize="18sp"></Button>
        <LinearLayout android:id="@+id/linearLayout2" android:layout_height="match_parent" android:layout_width="fill_parent" android:layout_weight="2"></LinearLayout>
        <Button android:drawableTop="@drawable/app_exit" android:layout_width="253dp" android:onClick="selfDestruct" android:text="@string/buttonExit" android:layout_height="wrap_content" android:id="@+id/buttonClose" android:textSize="18sp"></Button>
    </LinearLayout>
</LinearLayout>
</ScrollView>
