<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView9" android:layout_width="wrap_content" android:text="@string/buttonFood" android:layout_height="wrap_content"></TextView>
    <Spinner android:id="@+id/spinnerMeasure" android:layout_width="match_parent" android:layout_height="wrap_content"></Spinner>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView7" android:layout_width="wrap_content" android:text="@string/measure_type" android:layout_height="wrap_content"></TextView>
    <Spinner android:id="@+id/spinner1" android:layout_width="match_parent" android:layout_height="wrap_content"></Spinner>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView8" android:layout_width="wrap_content" android:text="@string/insulin_type" android:layout_height="wrap_content"></TextView>
    <Button android:id="@+id/button1" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/button_add_insulin_type" android:onClick="insulinDescActivity"></Button>
    
</LinearLayout>
