<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TextView android:id="@+id/textView1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/buttonConfig"></TextView>
    <Button android:text="@string/buttonBackup" android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/button1" android:onClick="backupActivity"></Button>
    <Button android:id="@+id/button3" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/button_shared_values" android:onClick="sharedValActivity"></Button>
    
</LinearLayout>
