<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView1" android:layout_width="wrap_content" android:text="@string/label_insulin" android:layout_height="wrap_content"></TextView>
    <Spinner android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/spinnerInsulins"></Spinner>
    <EditText android:id="@+id/editText1" android:layout_width="match_parent" android:layout_height="wrap_content"></EditText>
    <LinearLayout android:id="@+id/LinearLayout03" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_gravity="top|left">
        <TextView android:id="@+id/TextView03" android:text="@string/label_insulin_start" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="0.5" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_gravity="top|left"></TextView>
        <EditText android:id="@+id/EditText03" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="0.5" android:inputType="numberDecimal"></EditText>
    </LinearLayout>
    <LinearLayout android:id="@+id/LinearLayout02" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:id="@+id/TextView02" android:layout_height="wrap_content" android:text="@string/label_insulin_max_start" android:layout_width="fill_parent" android:layout_weight="0.5" android:textAppearance="?android:attr/textAppearanceSmall"></TextView>
        <EditText android:id="@+id/EditText02" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="0.5" android:inputType="numberDecimal"></EditText>
    </LinearLayout>
    <LinearLayout android:id="@+id/LinearLayout01" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:id="@+id/TextView01" android:layout_height="wrap_content" android:text="@string/label_insulin_max_end" android:layout_width="fill_parent" android:layout_weight="0.5" android:textAppearance="?android:attr/textAppearanceSmall"></TextView>
        <EditText android:id="@+id/EditText01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="0.5" android:inputType="numberDecimal"></EditText>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:id="@+id/textView2" android:layout_height="wrap_content" android:text="@string/label_insulin_end" android:layout_width="fill_parent" android:layout_weight="0.5" android:textAppearance="?android:attr/textAppearanceSmall"></TextView>
        <EditText android:id="@+id/editText2" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="0.5" android:inputType="numberDecimal"></EditText>
    </LinearLayout>
    
</LinearLayout>
